updated helm to make them work, and also updated helm lb.

--- a/springboot-cicd-demo-cluster/templates/tests/test-connection.yaml
+++ b/springboot-cicd-demo-cluster/templates/tests/test-connection.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: "{{ include "springboot-cicd-demo-cluster.fullname" . }}-test-connection"
+  namespace: {{ .Values.namespace }}
   labels:
     {{- include "springboot-cicd-demo-cluster.labels" . | nindent 4 }}
   annotations:
