--- a/springboot-cicd-demo-cluster/templates/ingress.yaml
+++ b/springboot-cicd-demo-cluster/templates/ingress.yaml
@@ -2,6 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: {{ include "springboot-cicd-demo-cluster.fullname" . }}
+  namespace: {{ .Values.namespace }}
   annotations:
     alb.ingress.kubernetes.io/scheme: internet-facing
     kubernetes.io/ingress.class: alb
