--- a/springboot-cicd-demo-cluster/values.yaml
+++ b/springboot-cicd-demo-cluster/values.yaml
@@ -19,7 +19,7 @@ services:
     secret: ''
 
 service:
-  type: 'NodePort'
+  type: 'ClusterIP'
   port: 8081
   targetPort: 8081
   nodePort: 30007
